Name:                minecraft-data
Version:             0.1
License:             BSD3
License-file:        LICENSE
Author:              Adam C. Foltzer
Maintainer:          acfoltzer@gmail.com
Category:            Game
Build-type:          Simple
Cabal-version:       >=1.8

Library
  exposed-modules:   Game.Minecraft.Block,
                     Game.Minecraft.Region
  build-depends:     base == 4.*,
                     bytestring == 0.9.*,
                     cereal >= 0.3.4 && < 0.4,
                     filepath == 1.2.*,
                     nbt == 0.3.*,
                     vector == 0.9.*,
                     zlib == 0.5.*